{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 31,
  "lineage": "581c65c3-a34a-4fe3-cfcb-eee1f9084d51",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "postech",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/postech-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 3,
                "labels": {},
                "name": "postech-ingress",
                "namespace": "default",
                "resource_version": "15675",
                "uid": "cdc45af6-5c7a-4686-a88a-90313d93de97"
              }
            ],
            "spec": [
              {
                "default_backend": [
                  {
                    "resource": [],
                    "service": [
                      {
                        "name": "users-api",
                        "port": [
                          {
                            "name": "",
                            "number": 80
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "users-api",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/users",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "catalog-api",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/game",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "catalog-api",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/health",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "users-api",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a90387d81e0f044f585d6d478ab8eeda-1c5523dd6017e971.elb.us-east-1.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "postech-ingress",
            "namespace": "default"
          },
          "dependencies": [
            "kubernetes_secret_v1.catalog_api",
            "kubernetes_secret_v1.payments_api",
            "kubernetes_secret_v1.users_api",
            "module.cognito.aws_cognito_user_pool.this",
            "module.cognito.aws_cognito_user_pool_client.this",
            "module.dynamodb.aws_dynamodb_table.catalog_games",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_security_group.cluster",
            "module.eks.data.aws_iam_role.cluster",
            "module.messaging.aws_sns_topic.order_created",
            "module.messaging.aws_sns_topic.order_processed",
            "module.messaging.aws_sns_topic.user_created",
            "module.messaging.aws_sqs_queue.catalog_order",
            "module.messaging.aws_sqs_queue.dlq_catalog_order",
            "module.messaging.aws_sqs_queue.dlq_payments_order",
            "module.messaging.aws_sqs_queue.payments_order",
            "module.messaging.data.aws_caller_identity.current",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_subnet_group.this",
            "module.redis.aws_elasticache_parameter_group.this",
            "module.redis.aws_elasticache_replication_group.this",
            "module.redis.aws_elasticache_subnet_group.this",
            "module.redis.aws_security_group.redis",
            "module.redis.random_password.auth",
            "module.security_groups.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:security-group/sg-02c996cb133cb8a55",
            "description": "EKS cluster control plane security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c996cb133cb8a55",
            "ingress": [],
            "name": "tf-postech-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "565655678867",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-eks-cluster-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a24f5bf88f813fd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "sg-02c996cb133cb8a55",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "cluster_https_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:security-group-rule/sgr-0543ccfcc23d8e95b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow HTTPS within cluster SG",
            "from_port": 443,
            "id": "sgr-0543ccfcc23d8e95b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02c996cb133cb8a55",
            "region": "us-east-1",
            "security_group_id": "sg-02c996cb133cb8a55",
            "security_group_rule_id": "sgr-0543ccfcc23d8e95b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "sgr-0543ccfcc23d8e95b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba5cdce768ce3be3",
            "arn": "arn:aws:ec2:us-east-1:565655678867:elastic-ip/eipalloc-0ba5cdce768ce3be3",
            "domain": "vpc",
            "id": "eipalloc-0ba5cdce768ce3be3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-75-116.compute-1.amazonaws.com",
            "public_ip": "3.228.75.116",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-nat-eip"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "eipalloc-0ba5cdce768ce3be3",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:internet-gateway/igw-0f10b848f817751f4",
            "id": "igw-0f10b848f817751f4",
            "owner_id": "565655678867",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-igw"
            },
            "vpc_id": "vpc-0a24f5bf88f813fd8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "igw-0f10b848f817751f4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba5cdce768ce3be3",
            "association_id": "eipassoc-0e2fa1f3b465b08b6",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c8db7cce9c31846f",
            "network_interface_id": "eni-0acb6e06f15e1efa9",
            "private_ip": "10.0.0.10",
            "public_ip": "3.228.75.116",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-050f288060ccf0fc0",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-nat"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-nat"
            },
            "vpc_id": "vpc-0a24f5bf88f813fd8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "nat-0c8db7cce9c31846f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:route-table/rtb-07d59974da14300a0",
            "id": "rtb-07d59974da14300a0",
            "owner_id": "565655678867",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c8db7cce9c31846f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-rt-private"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a24f5bf88f813fd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "rtb-07d59974da14300a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:route-table/rtb-05ce17faa0fa41c0e",
            "id": "rtb-05ce17faa0fa41c0e",
            "owner_id": "565655678867",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f10b848f817751f4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-rt-public"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a24f5bf88f813fd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "rtb-05ce17faa0fa41c0e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0757ba5c3aa5915d0",
            "region": "us-east-1",
            "route_table_id": "rtb-07d59974da14300a0",
            "subnet_id": "subnet-037b9f1b8683709e9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "rtbassoc-0757ba5c3aa5915d0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057f94b906358ad3c",
            "region": "us-east-1",
            "route_table_id": "rtb-07d59974da14300a0",
            "subnet_id": "subnet-05943d85f9709b8b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "rtbassoc-057f94b906358ad3c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02278b56107496ea3",
            "region": "us-east-1",
            "route_table_id": "rtb-05ce17faa0fa41c0e",
            "subnet_id": "subnet-050f288060ccf0fc0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "rtbassoc-02278b56107496ea3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090fcd8c1cdc16845",
            "region": "us-east-1",
            "route_table_id": "rtb-05ce17faa0fa41c0e",
            "subnet_id": "subnet-0cb1b040eb983b27f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "rtbassoc-090fcd8c1cdc16845",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:subnet/subnet-037b9f1b8683709e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037b9f1b8683709e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565655678867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a24f5bf88f813fd8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "subnet-037b9f1b8683709e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:subnet/subnet-05943d85f9709b8b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05943d85f9709b8b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565655678867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a24f5bf88f813fd8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "subnet-05943d85f9709b8b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:subnet/subnet-050f288060ccf0fc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050f288060ccf0fc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565655678867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a24f5bf88f813fd8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "subnet-050f288060ccf0fc0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:subnet/subnet-0cb1b040eb983b27f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb1b040eb983b27f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565655678867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a24f5bf88f813fd8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "subnet-0cb1b040eb983b27f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:vpc/vpc-0a24f5bf88f813fd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc746e1c580bb9bb",
            "default_route_table_id": "rtb-038c258a3ec43518f",
            "default_security_group_id": "sg-054e7e6abc050f931",
            "dhcp_options_id": "dopt-0b2f401a1029edfda",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a24f5bf88f813fd8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-038c258a3ec43518f",
            "owner_id": "565655678867",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "vpc-0a24f5bf88f813fd8",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:security-group/sg-08b34bb3866d4417a",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b34bb3866d4417a",
            "ingress": [],
            "name": "tf-postech-redis-sg",
            "name_prefix": "",
            "owner_id": "565655678867",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-redis-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "tf-postech-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a24f5bf88f813fd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "sg-08b34bb3866d4417a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "redis_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:security-group-rule/sgr-04b40ab49c86f277c",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow VPC to reach Redis",
            "from_port": 6379,
            "id": "sgr-04b40ab49c86f277c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08b34bb3866d4417a",
            "security_group_rule_id": "sgr-04b40ab49c86f277c",
            "tags": null,
            "tags_all": {},
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "sgr-04b40ab49c86f277c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.redis.aws_security_group.redis"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:security-group/sg-09373eacf28498941",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09373eacf28498941",
            "ingress": [],
            "name": "tf-postech-rds-sg",
            "name_prefix": "",
            "owner_id": "565655678867",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-postech-rds-sg"
            },
            "tags_all": {
              "Name": "tf-postech-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a24f5bf88f813fd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "sg-09373eacf28498941",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:security-group-rule/sgr-092405ac4a9d48ec3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow admin IP to reach Postgres (pgAdmin)",
            "from_port": 5432,
            "id": "sgr-092405ac4a9d48ec3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09373eacf28498941",
            "security_group_rule_id": "sgr-092405ac4a9d48ec3",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "sgr-092405ac4a9d48ec3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565655678867:security-group-rule/sgr-0a92fc3aec9175ded",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow VPC to reach Postgres",
            "from_port": 5432,
            "id": "sgr-0a92fc3aec9175ded",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09373eacf28498941",
            "security_group_rule_id": "sgr-0a92fc3aec9175ded",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565655678867",
            "id": "sgr-0a92fc3aec9175ded",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.rds"
          ]
        }
      ]
    }
  ]
}